--- a/src/main/resources/com/shootoff/gui/ShootOFF.fxml
+++ b/src/main/resources/com/shootoff/gui/ShootOFF.fxml
@@ -41,11 +41,9 @@
                   <TabPane fx:id="cameraTabPane" minHeight="480.0" minWidth="640.0" prefHeight="480.0" prefWidth="640.0" tabClosingPolicy="UNAVAILABLE" HBox.hgrow="NEVER" />
                   <VBox fx:id="buttonsContainer" alignment="CENTER" spacing="30.0">
                      <children>
-                        <Button mnemonicParsing="false" onAction="#resetClicked" prefHeight="100.0" prefWidth="150.0" text="Reset" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.valignment="CENTER" GridPane.vgrow="NEVER">
-                           <GridPane.margin>
-                              <Insets bottom="2.0" />
-                           </GridPane.margin>
-                        </Button>
+                        <Button mnemonicParsing="false" onAction="#resetClicked" prefHeight="100.0" prefWidth="150.0" text="Reset" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.vgrow="NEVER" />
+                        <Button mnemonicParsing="false" onAction="#saveTargetsClicked" prefHeight="100.0" prefWidth="150.0" text="Save Targets" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.vgrow="NEVER" />
+                        <Button mnemonicParsing="false" onAction="#loadTargetsClicked" prefHeight="100.0" prefWidth="150.0" text="Load Targets" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.vgrow="NEVER" />
                      </children>
                   </VBox>
                </children>
